--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -2,7 +2,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'ReportComponent.Filter'| translate}}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -12,21 +12,21 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="reportName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'ReportComponent.Name'| translate}} </th>
         <td mat-cell *matCellDef="let report"> {{ report.reportName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="reportType">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'ReportComponent.Type'| translate}} </th>
         <td mat-cell *matCellDef="let report"> {{ report.reportType }} </td>
       </ng-container>
 
       <ng-container matColumnDef="reportCategory">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'ReportComponent.Category'| translate}} </th>
         <td mat-cell *matCellDef="let report"> {{ report.reportCategory }} </td>
       </ng-container>
 
-      
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="select-row" [routerLink]="['/reports','run', row.reportName]" [queryParams]="{ type: row.reportType, id: row.id }"></tr>
 
