--- a/src/app/reports/xbrl-report/xbrl-report.component.html
+++ b/src/app/reports/xbrl-report/xbrl-report.component.html
@@ -7,14 +7,14 @@
       <mat-card-content fxLayout="column">
 
         <mat-form-field fxFlex>
-          <mat-label>Start Date</mat-label>
+          <mat-label>{{'ReportComponent.XbrlReport.startDate'| translate}}</mat-label>
           <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="startDatePicker" formControlName="startDate">
           <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #startDatePicker></mat-datepicker>
         </mat-form-field>
 
         <mat-form-field fxFlex>
-          <mat-label>End Date</mat-label>
+          <mat-label>{{'ReportComponent.XbrlReport.endDate'| translate}}</mat-label>
           <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="endDatePicker" formControlName="endDate">
           <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #endDatePicker></mat-datepicker>
@@ -23,12 +23,12 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" id="runReport">Run Report</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" id="runReport">{{'ReportComponent.XbrlReport.RunReport'| translate}}</button>
       </mat-card-actions>
 
     </form>
-    
+
   </mat-card>
 
 </div>
@@ -38,7 +38,7 @@
   <mat-card *ngIf="!isCollapsed">
 
     <button mat-raised-button color="primary" (click)="isCollapsed = !isCollapsed">
-      Parameters
+      {{'ReportComponent.XbrlReport.xxx'| translate}}Parameters
     </button>
 
     <div class="m-t-20">
@@ -46,17 +46,17 @@
       <table mat-table [dataSource]="dataSource" matSort>
 
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'ReportComponent.XbrlReport.Name'| translate}} </th>
           <td mat-cell *matCellDef="let entry"> {{ entry.name }} </td>
         </ng-container>
 
         <ng-container matColumnDef="dimension">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Dimension </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'ReportComponent.XbrlReport.Dimension'| translate}} </th>
           <td mat-cell *matCellDef="let entry"> {{ entry.dimension }} </td>
         </ng-container>
 
         <ng-container matColumnDef="value">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Value </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'ReportComponent.XbrlReport.Value'| translate}} </th>
           <td mat-cell *matCellDef="let entry"> <input [formControl]="entry.value"></td>
         </ng-container>
 
@@ -66,9 +66,9 @@
       </table>
 
       <div class="container m-t-20" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="10px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
         <a [href]="submit()" download="file.xml">
-        <button mat-raised-button color="primary">Submit</button>
+        <button mat-raised-button color="primary">{{ "ShareButton.Submit" | translate }}</button>
         </a>
       </div>
 
