--- a/src/app/savings/saving-account-actions/undo-approval-savings-account/undo-approval-savings-account.component.html
+++ b/src/app/savings/saving-account-actions/undo-approval-savings-account/undo-approval-savings-account.component.html
@@ -7,15 +7,15 @@
       <mat-card-content>
 
         <mat-form-field fxFlex>
-          <mat-label>Note</mat-label>
+          <mat-label>{{'Savings.Actions.UndoApproval.Note'| translate}}</mat-label>
           <textarea matInput formControlName="note"></textarea>
         </mat-form-field>
 
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="warn" [disabled]="!undoApprovalSavingsAccountForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="warn" [disabled]="!undoApprovalSavingsAccountForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
