--- a/src/app/savings/create-savings-account/create-savings-account.component.html
+++ b/src/app/savings/create-savings-account/create-savings-account.component.html
@@ -24,10 +24,10 @@
 
     <mat-step [stepControl]="savingsAccountDetailsForm">
 
-      <ng-template matStepLabel>DETAILS</ng-template>
+      <ng-template matStepLabel>{{'Savings.CreateSavingAccount.DETAILS'| translate}}</ng-template>
 
       <mifosx-savings-account-details-step
-        [savingsAccountTemplate]="savingsAccountTemplate" 
+        [savingsAccountTemplate]="savingsAccountTemplate"
         (savingsAccountProductTemplate)="setTemplate($event)"
       >
       </mifosx-savings-account-details-step>
@@ -36,9 +36,9 @@
 
     <mat-step [stepControl]="savingsAccountTermsForm">
 
-      <ng-template matStepLabel>TERMS</ng-template>
+      <ng-template matStepLabel>{{'Savings.CreateSavingAccount.TERMS'| translate}}</ng-template>
 
-      <mifosx-savings-account-terms-step 
+      <mifosx-savings-account-terms-step
         [savingsAccountProductTemplate]="savingsAccountProductTemplate"
       ></mifosx-savings-account-terms-step>
 
@@ -46,7 +46,7 @@
 
     <mat-step>
 
-      <ng-template matStepLabel>CHARGES</ng-template>
+      <ng-template matStepLabel>{{'Savings.CreateSavingAccount.CHARGES'| translate}}</ng-template>
 
       <mifosx-savings-account-charges-step
         [savingsAccountProductTemplate]="savingsAccountProductTemplate"
@@ -59,7 +59,7 @@
 
     <mat-step *ngIf="savingsAccountFormValid" completed>
 
-      <ng-template matStepLabel>PREVIEW</ng-template>
+      <ng-template matStepLabel>{{'Savings.CreateSavingAccount.PREVIEW'| translate}}</ng-template>
 
       <mifosx-savings-account-preview-step
         [savingsAccountProductTemplate]="savingsAccountProductTemplate"
