--- a/src/app/savings/saving-account-actions/activate-savings-account/activate-savings-account.component.html
+++ b/src/app/savings/saving-account-actions/activate-savings-account/activate-savings-account.component.html
@@ -7,20 +7,20 @@
       <mat-card-content>
 
         <mat-form-field fxFlex>
-          <mat-label>Activated On Date</mat-label>
+          <mat-label>{{'Savings.Actions.Activate.activatedOnDate'| translate}}</mat-label>
           <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="activatedOnDatePicker" required formControlName="activatedOnDate">
           <mat-datepicker-toggle matSuffix [for]="activatedOnDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #activatedOnDatePicker></mat-datepicker>
           <mat-error *ngIf="activateSavingsAccountForm.controls.activatedOnDate.hasError('required')">
-            Activated On Date is <strong>required</strong>
+            {{'Savings.Actions.Activate.erractivatedOnDate'| translate}}<strong>{{'Savings.strongRequired'| translate }}</strong>
           </mat-error>
         </mat-form-field>
 
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="accent" [disabled]="!activateSavingsAccountForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="accent" [disabled]="!activateSavingsAccountForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
