--- a/src/app/savings/saving-account-actions/add-charge-savings-account/add-charge-savings-account.component.html
+++ b/src/app/savings/saving-account-actions/add-charge-savings-account/add-charge-savings-account.component.html
@@ -8,29 +8,29 @@
 
         <div fxLayout="column">
           <mat-form-field>
-            <mat-label>Charge</mat-label>
+            <mat-label>{{'Savings.Actions.AddCharge.Charge'| translate}}</mat-label>
             <mat-select required formControlName="chargeId">
               <mat-option *ngFor="let savingsCharge of savingsChargeOptions" [value]="savingsCharge.id">
                 {{ savingsCharge.name + ' (' + savingsCharge.currency.name + ')' }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="savingsChargeForm.controls.chargeId.hasError('required')">
-              Charge is <strong>required</strong>
+              {{'Savings.Actions.AddCharge.errCharge'| translate}}<strong>{{'Savings.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <div *ngIf="chargeDetails" fxLayout="column">
 
             <mat-form-field>
-              <mat-label>Amount</mat-label>
+              <mat-label>{{'Savings.Actions.AddCharge.Amount'| translate}}</mat-label>
               <input currencyMask type="text" required matInput formControlName="amount" />
               <mat-error *ngIf="savingsChargeForm.controls.amount.hasError('required')">
-                Amount is <strong>required</strong>
+                {{'Savings.Actions.AddCharge.errAmount'| translate}}<strong>{{'Savings.strongRequired'| translate }}</strong>
               </mat-error>
             </mat-form-field>
 
             <mat-form-field>
-              <mat-label>Charge Calculation</mat-label>
+              <mat-label>{{'Savings.Actions.AddCharge.chargeCalculationType'| translate}}</mat-label>
               <mat-select formControlName="chargeCalculationType">
                 <mat-option *ngFor="let chargeCalculation of chargeDetails.chargeCalculationTypeOptions"
                   [value]="chargeCalculation.id">
@@ -40,7 +40,7 @@
             </mat-form-field>
 
             <mat-form-field>
-              <mat-label>Charge time type</mat-label>
+              <mat-label>{{'Savings.Actions.AddCharge.chargeTimeType'| translate}}</mat-label>
               <mat-select formControlName="chargeTimeType">
                 <mat-option *ngFor="let chargeTime of chargeDetails.chargeTimeTypeOptions" [value]="chargeTime.id">
                   {{ chargeTime.value }}
@@ -49,29 +49,29 @@
             </mat-form-field>
 
             <mat-form-field *ngIf="savingsChargeForm.contains('dueDate')">
-              <mat-label>Due for collection on</mat-label>
+              <mat-label>{{'Savings.Actions.AddCharge.dueDate'| translate}}</mat-label>
               <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="dueDatePicker" required
                 formControlName="dueDate">
               <mat-datepicker-toggle matSuffix [for]="dueDatePicker"></mat-datepicker-toggle>
               <mat-datepicker #dueDatePicker></mat-datepicker>
               <mat-error *ngIf="savingsChargeForm.controls.dueDate.hasError('required')">
-                Due for collection on is <strong>required</strong>
+                {{'Savings.Actions.AddCharge.errdueDate'| translate}}<strong>{{'Savings.strongRequired'| translate }}</strong>
               </mat-error>
             </mat-form-field>
 
             <mat-form-field *ngIf="savingsChargeForm.contains('feeOnMonthDay')">
-              <mat-label>Due On</mat-label>
+              <mat-label>{{'Savings.Actions.AddCharge.feeOnMonthDay'| translate}}</mat-label>
               <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="feeOnMonthDayPicker" required
                 formControlName="feeOnMonthDay">
               <mat-datepicker-toggle matSuffix [for]="feeOnMonthDayPicker"></mat-datepicker-toggle>
               <mat-datepicker #feeOnMonthDayPicker></mat-datepicker>
               <mat-error *ngIf="savingsChargeForm.controls.feeOnMonthDay.hasError('required')">
-                Due Date is <strong>required</strong>
+                {{'Savings.Actions.AddCharge.errfeeOnMonthDay'| translate}}<strong>{{'Savings.strongRequired'| translate }}</strong>
               </mat-error>
             </mat-form-field>
 
             <mat-form-field *ngIf="savingsChargeForm.contains('feeInterval')">
-              <mat-label>Repeats Every</mat-label>
+              <mat-label>{{'Savings.Actions.AddCharge.feeInterval'| translate}}</mat-label>
               <input matInput formControlName="feeInterval" />
             </mat-form-field>
 
@@ -80,8 +80,8 @@
         </div>
 
         <mat-card-actions fxLayoutGap="5px" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center">
-          <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-          <button mat-raised-button color="primary" [disabled]="!savingsChargeForm.valid">Submit</button>
+          <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+          <button mat-raised-button color="primary" [disabled]="!savingsChargeForm.valid">{{ "ShareButton.Submit" | translate }}</button>
         </mat-card-actions>
 
       </mat-card-content>
