--- a/src/app/savings/saving-account-actions/savings-account-assign-staff/savings-account-assign-staff.component.html
+++ b/src/app/savings/saving-account-actions/savings-account-assign-staff/savings-account-assign-staff.component.html
@@ -9,7 +9,7 @@
         <div fxLayout="column">
 
           <mat-form-field fxFlex="48%">
-            <mat-label>To Savings Officer</mat-label>
+            <mat-label>{{'Savings.Actions.AssignStaff.toSavingsOfficerId'| translate}}</mat-label>
             <mat-select formControlName="toSavingsOfficerId">
               <mat-option *ngFor="let officer of fieldOfficerData" [value]="officer.id">
                 {{ officer.displayName }}
@@ -18,12 +18,12 @@
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Assignment Date</mat-label>
+            <mat-label>{{'Savings.Actions.AssignStaff.assignmentDate'| translate}}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="assignmentDatePicker" required formControlName="assignmentDate">
             <mat-datepicker-toggle matSuffix [for]="assignmentDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #assignmentDatePicker></mat-datepicker>
             <mat-error *ngIf="savingsAssignStaffForm.controls.assignmentDate.hasError('required')">
-              Assignment Date is <strong>required</strong>
+              {{'Savings.Actions.AssignStaff.errassignmentDate'| translate}}<strong>{{'Savings.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -32,8 +32,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!savingsAssignStaffForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!savingsAssignStaffForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
