--- a/src/app/savings/saving-account-actions/savings-account-transactions/savings-account-transactions.component.html
+++ b/src/app/savings/saving-account-actions/savings-account-transactions/savings-account-transactions.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <mat-card>
-    <h2 mat-title *ngIf="transactionType.withdrawal">Rút tiền từ tài khoản thanh toán</h2>
-    <h2 mat-title *ngIf="transactionType.deposit">Nộp tiền vào tài khoản thanh toán</h2>
+    <h2 mat-title *ngIf="transactionType.withdrawal">{{'Savings.Actions.Transactions.title'| translate}}</h2>
+    <h2 mat-title *ngIf="transactionType.deposit">{{'Savings.Actions.Transactions.title2'| translate}}</h2>
 
     <form [formGroup]="savingAccountTransactionForm" (ngSubmit)="submit()">
       <mat-card-content fxLayout="column">
         <mat-form-field>
-          <mat-label>Ngày giao dịch </mat-label>
+          <mat-label>{{'Savings.Actions.Transactions.transactionDate'| translate}} </mat-label>
           <input
             matInput
             [min]="minDate"
@@ -18,36 +18,36 @@
           <mat-datepicker-toggle matSuffix [for]="dueDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #dueDatePicker></mat-datepicker>
           <mat-error *ngIf="savingAccountTransactionForm.controls.transactionDate.hasError('required')">
-            Ngày giao dịch <strong>bắt buộc</strong>
+            {{'Savings.Actions.Transactions.errtransactionDate'| translate}}<strong>{{'Savings.Actions.Transactions.required'| translate}}</strong>
           </mat-error>
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Số tiền</mat-label>
+          <mat-label>{{'Savings.Actions.Transactions.transactionAmount'| translate}}</mat-label>
           <input currencyMask type="text" formControlName="transactionAmount" required matInput currencyMask />
           <mat-error *ngIf="savingAccountTransactionForm.controls.transactionAmount.hasError('required')">
-            Số tiền <strong>bắt buộc</strong>
+            {{'Savings.Actions.Transactions.errtransactionAmount'| translate}}<strong>{{'Savings.Actions.Transactions.required'| translate}}</strong>
           </mat-error>
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Nhóm chi phí</mat-label>
+          <mat-label>{{'Savings.Actions.Transactions.paymentTypeGroup'| translate}}</mat-label>
           <mat-select #paymentTypeGroup formControlName="paymentTypeGroup">
             <!-- <mat-option *ngFor="let paymentType of paymentTypeOptions" [value]="paymentType.id">
               {{ paymentType.name }}
             </mat-option> -->
-            <mat-option label="Chi phí khác" value="!Expense"> Chi phí khác </mat-option>
-            <mat-option label="Định phí" value="Expense-Fixed"> Định phí </mat-option>
-            <mat-option label="Biến phí" value="Expense-Variabled"> Biến phí </mat-option>
-            <mat-option label="Tạm ứng thù lao" value="Expense-Equity"> Tạm ứng thù lao </mat-option>
+            <mat-option label="Chi phí khác" value="!Expense"> {{'Savings.Actions.Transactions.Expense'| translate}} </mat-option>
+            <mat-option label="Định phí" value="Expense-Fixed"> {{'Savings.Actions.Transactions.Fixed'| translate}} </mat-option>
+            <mat-option label="Biến phí" value="Expense-Variabled"> {{'Savings.Actions.Transactions.Variabled'| translate}} </mat-option>
+            <mat-option label="Tạm ứng thù lao" value="Expense-Equity"> {{'Savings.Actions.Transactions.Equity'| translate}} </mat-option>
           </mat-select>
           <mat-error *ngIf="savingAccountTransactionForm?.controls?.paymentTypeGroup?.hasError('required')">
-            Nhóm chi phí <strong>bắt buộc</strong>
+            {{'Savings.Actions.Transactions.errpaymentTypeGroup'| translate}}<strong>{{'Savings.Actions.Transactions.required'| translate}}</strong>
           </mat-error>
         </mat-form-field>
 
         <mat-form-field>
-          <mat-label>Loại chi phí</mat-label>
+          <mat-label>{{'Savings.Actions.Transactions.paymentType'| translate}}</mat-label>
           <mat-select formControlName="paymentTypeId">
             <mat-option *ngFor="let paymentType of filteredOptions" [value]="paymentType.id">
               {{ paymentType.name }}
@@ -56,26 +56,26 @@
           <mat-label style="color: green; font-weight: bold">: {{ paymentTypeDescription }}</mat-label>
 
           <mat-error *ngIf="savingAccountTransactionForm.controls.paymentTypeId.hasError('required')">
-            Loại chi phí <strong>bắt buộc</strong>
+            {{'Savings.Actions.Transactions.errpaymentType'| translate}}<strong>{{'Savings.Actions.Transactions.required'| translate}}</strong>
           </mat-error>
         </mat-form-field>
 
         <div fxLayout="row" fxLayout.xs="column" class="form-group" *ngIf="limitInfo && limitInfo.limitConfig && limitInfo.limitConfig != 0 ">
           <ul>
             <li>
-              <span>Định mức tháng này:</span
+              <span>{{'Savings.Actions.Transactions.limitConfig'| translate}}</span
               ><span class="text-right">
                 {{ limitInfo.limitConfig | money }}
               </span>
             </li>
             <li>
-              <span>Hiện tại đã chi:</span>
+              <span>{{'Savings.Actions.Transactions.limitUsed'| translate}}</span>
               <span class="text-right" style="color: red; font-weight: bold">
                 {{ limitInfo.limitUsed | money }}
               </span>
             </li>
             <li>
-              <span>Định mức còn lại:</span
+              <span>{{'Savings.Actions.Transactions.limitAvailable'| translate}}</span
               ><span class="text-right" style="color: green; font-weight: bold">
                 {{ limitInfo.limitConfig - limitInfo.limitUsed | money }}
               </span>
@@ -90,7 +90,7 @@
           </button>
         </div> -->
         <mat-form-field *ngIf="savingAccountTransactionForm.controls['bankNumber']">
-          <mat-label>Chi nhánh</mat-label>
+          <mat-label>{{'Savings.Actions.Transactions.office'| translate}}</mat-label>
           <mat-select formControlName="bankNumber">
             <mat-option *ngFor="let office of offices" selected label="{{ office.name }}" value="{{ office.id }}">
               {{ office.name }}
@@ -98,11 +98,11 @@
           </mat-select>
         </mat-form-field>
         <mat-form-field *ngIf="savingAccountTransactionForm.controls['accountNumber'] && !showStaffChoose">
-          <mat-label>Account Number</mat-label>
+          <mat-label>{{'Savings.Actions.Transactions.accountNumber'| translate}}</mat-label>
           <input type="number" formControlName="accountNumber" matInput />
         </mat-form-field>
         <mat-form-field *ngIf="savingAccountTransactionForm.controls['accountNumber'] && showStaffChoose">
-          <mat-label>Nhân viên</mat-label>
+          <mat-label>{{'Savings.Actions.Transactions.accountNumber2'| translate}}</mat-label>
           <mat-select formControlName="accountNumber">
             <mat-option *ngFor="let staff of limitInfo?.listStaff" selected label="{{ staff.displayName }}" value="{{ staff.staffId }}">
               {{ staff.displayName }}
@@ -111,30 +111,30 @@
         </mat-form-field>
 
         <mat-form-field *ngIf="savingAccountTransactionForm.controls['checkNumber']">
-          <mat-label>Cheque</mat-label>
+          <mat-label>{{'Savings.Actions.Transactions.Cheque'| translate}}</mat-label>
           <input type="number" formControlName="checkNumber" matInput />
         </mat-form-field>
 
         <mat-form-field *ngIf="savingAccountTransactionForm.controls['routingCode']">
-          <mat-label>Routing Code</mat-label>
+          <mat-label>{{'Savings.Actions.Transactions.routingCode'| translate}}</mat-label>
           <input formControlName="routingCode" matInput />
         </mat-form-field>
 
         <mat-form-field *ngIf="savingAccountTransactionForm.controls['receiptNumber']">
-          <mat-label>Receipt Number</mat-label>
+          <mat-label>{{'Savings.Actions.Transactions.receiptNumber'| translate}}</mat-label>
           <input formControlName="receiptNumber" matInput />
         </mat-form-field>
 
 
 
         <mat-form-field>
-          <mat-label>Ghi chú</mat-label>
+          <mat-label>{{'Savings.Actions.Transactions.note'| translate}}</mat-label>
           <textarea formControlName="note" matInput></textarea>
         </mat-form-field>
 
         <mat-card-actions fxLayoutGap="5px" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center">
-          <button type="button" mat-raised-button [routerLink]="['../../']">Trở về</button>
-          <button mat-raised-button color="primary" [disabled]="!savingAccountTransactionForm.valid">Thực hiện</button>
+          <button type="button" mat-raised-button [routerLink]="['../../']">{{'Savings.Actions.Transactions.Cancel'| translate}}</button>
+          <button mat-raised-button color="primary" [disabled]="!savingAccountTransactionForm.valid">{{'Savings.Actions.Transactions.Confirm'| translate}}</button>
         </mat-card-actions>
       </mat-card-content>
     </form>
