--- a/src/app/savings/savings-account-stepper/savings-account-preview-step/savings-account-preview-step.component.html
+++ b/src/app/savings/savings-account-stepper/savings-account-preview-step/savings-account-preview-step.component.html
@@ -1,149 +1,149 @@
 <div fxLayout="row wrap" fxLayout.lt-md="column">
 
-  <h3 class="mat-h3" fxFlexFill>Details</h3>
+  <h3 class="mat-h3" fxFlexFill>{{'Savings.Stepper.Preview.Details'| translate}}</h3>
 
   <mat-divider fxFlexFill></mat-divider>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Product</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.Product'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.productId | find:savingsAccountTemplate.productOptions:'id':'name' }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Submitted On</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.submittedOnDate'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.submittedOnDate | date }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">External Id</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.externalId'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.externalId || 'Unassigned' }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Field Officer</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.FieldOfficer'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.fieldOfficerId | find:savingsAccountProductTemplate.fieldOfficerOptions:'id':'displayName' }}</span>
   </div>
 
-  <h3 class="mat-h3" fxFlexFill>Terms</h3>
+  <h3 class="mat-h3" fxFlexFill>{{'Savings.Stepper.Preview.Terms'| translate}}</h3>
 
   <mat-divider fxFlexFill></mat-divider>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Currency</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.Currency'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccountTermsForm.get('currencyCode').value  }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Decimal Places</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.decimal'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccountTermsForm.get('decimal').value }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Currency in multiples of</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.currencyMultiple'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccountTermsForm.get('currencyMultiple').value }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Nominal Annual Interest Rate:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.nominalAnnualInterestRate'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.nominalAnnualInterestRate }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Interest Compounding Period:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.interestCompoundingPeriodType'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.interestCompoundingPeriodType | find:savingsAccountProductTemplate.interestCompoundingPeriodTypeOptions:'id':'value' }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Interest Posting Period:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.interestPostingPeriodType'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.interestPostingPeriodType | find:savingsAccountProductTemplate.interestPostingPeriodTypeOptions:'id':'value' }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Interest Calculated using:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.interestCalculationType'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.interestCalculationType | find:savingsAccountProductTemplate.interestCalculationTypeOptions:'id':'value' }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Days in Year:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.DaysInYear'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.interestCalculationDaysInYearType | find:savingsAccountProductTemplate.interestCalculationDaysInYearTypeOptions:'id':'value' }}</span>
   </div>
 
   <div fxFlexFill *ngIf="savingsAccount.minRequiredOpeningBalance">
-    <span fxFlex="40%">Minimum Opening Balance:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.minRequiredOpeningBalance'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.minRequiredOpeningBalance | money }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Apply Withdrawal Fee for Transfers:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.withdrawalFeeForTransfers'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.withdrawalFeeForTransfers ? 'Yes' : 'No' }}</span>
   </div>
 
   <div fxFlexFill *ngIf="savingsAccount.lockinPeriodFrequency">
-    <span fxFlex="40%">Lock-in Period:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.lockinPeriodFrequency'| translate}}Lock-in Period:</span>
     <span fxFlex="60%">{{ savingsAccount.lockinPeriodFrequency + ' ' + (savingsAccount.lockinPeriodFrequencyType | find:savingsAccountProductTemplate.lockinPeriodFrequencyTypeOptions:'id':'value') }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Is Overdraft Allowed:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.allowOverdraft'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.allowOverdraft ? 'Yes' : 'No' }}</span>
   </div>
 
   <div fxFlexFill *ngIf="savingsAccount.minOverdraftForInterestCalculation">
-    <span fxFlex="40%">Minimum Overdraft Required for Interest Calculation:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.minOverdraftForInterestCalculation'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.minOverdraftForInterestCalculation }}</span>
   </div>
 
   <div fxFlexFill *ngIf="savingsAccount.nominalAnnualInterestRateOverdraft">
-    <span fxFlex="40%">Nominal Annual Interest for Overdraft:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.nominalAnnualInterestRateOverdraft'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.nominalAnnualInterestRateOverdraft }}</span>
   </div>
 
   <div fxFlexFill *ngIf="savingsAccount.overdraftLimit">
-    <span fxFlex="40%">Maximum Overdraft Amount Limit:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.overdraftLimit'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.overdraftLimit }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Enforce Minimum Balance:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.enforceMinRequiredBalance'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.enforceMinRequiredBalance ? 'Yes' : 'No' }}</span>
   </div>
 
   <div fxFlexFill *ngIf="savingsAccount.minRequiredBalance">
-    <span fxFlex="40%">Minimum Balance:</span>
+    <span fxFlex="40%">{{'Savings.Stepper.Preview.minRequiredBalance'| translate}}</span>
     <span fxFlex="60%">{{ savingsAccount.minRequiredBalance | money }}</span>
   </div>
 
   <div fxFlexFill *ngIf="savingsAccount.charges.length" fxLayout="row wrap" fxLayout.lt-md="column">
 
-    <h3 class="mat-h3" fxFlexFill>Charges</h3>
+    <h3 class="mat-h3" fxFlexFill>{{'Savings.Stepper.Preview.Charges'| translate}}</h3>
 
     <mat-divider fxFlexFill></mat-divider>
 
     <table fxFlexFill class="mat-elevation-z1" mat-table [dataSource]="savingsAccount.charges">
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Savings.Stepper.Preview.Name'| translate}} </th>
         <td mat-cell *matCellDef="let charge">
           {{ charge.name + ', ' + charge.currency.displaySymbol }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="chargeCalculationType">
-        <th mat-header-cell *matHeaderCellDef> Type </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Savings.Stepper.Preview.Type'| translate}} </th>
         <td mat-cell *matCellDef="let charge">
           {{ charge.chargeCalculationType.value }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef> Amount </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Savings.Stepper.Preview.Amount'| translate}} </th>
         <td mat-cell *matCellDef="let charge">
           {{ charge.amount | money }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Savings.Stepper.Preview.Date'| translate}} </th>
         <td mat-cell *matCellDef="let charge">
           <span *ngIf="charge.chargeTimeType.value === 'Specified due date' || charge.chargeTimeType.value === 'Weekly Fee'">
             {{(charge.dueDate | date) || 'Unassigned'}}
@@ -154,20 +154,20 @@
           <span
             *ngIf="!(charge.chargeTimeType.value === 'Monthly Fee' || charge.chargeTimeType.value === 'Annual Fee'
               || charge.chargeTimeType.value === 'Specified due date' || charge.chargeTimeType.value === 'Weekly Fee')">
-            N/A
+              {{'Savings.Stepper.Preview.NA'| translate}}
           </span>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="repaymentsEvery">
-        <th mat-header-cell *matHeaderCellDef> Repayments Every </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Savings.Stepper.Preview.repaymentsEvery'| translate}} </th>
         <td mat-cell *matCellDef="let charge">
           {{ charge.feeInterval || 'Not Provided' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="chargeTimeType">
-        <th mat-header-cell *matHeaderCellDef> Collected On </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Savings.Stepper.Preview.chargeTimeType'| translate}} </th>
         <td mat-cell *matCellDef="let charge">
           {{ charge.chargeTimeType.value }}
         </td>
@@ -185,12 +185,12 @@
 <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
   <button mat-raised-button matStepperPrevious>
     <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-    Previous
+    {{ "ShareButton.PreviousEng" | translate }}
   </button>
   <button mat-raised-button [routerLink]="['../']">
-    Cancel
+    {{ "ShareButton.CancelEng" | translate }}
   </button>
   <button mat-raised-button color="primary" (click)="submit.emit()">
-    Submit
+    {{ "ShareButton.Submit" | translate }}
   </button>
 </div>
