--- a/src/app/savings/savings-account-view/custom-dialogs/post-interest-dialog/post-interest-dialog.component.html
+++ b/src/app/savings/savings-account-view/custom-dialogs/post-interest-dialog/post-interest-dialog.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Post Interest</h1>
+<h1 mat-dialog-title>{{'Savings.View.CustomDialog.PostInterest.PostInterest'| translate}}</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to post interest ?</p>
+  <p>{{'Savings.View.CustomDialog.PostInterest.content'| translate}}</p>
 </div>
 <mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close>Cancel</button>
-  <button mat-raised-button color="primary" [mat-dialog-close]="{ confirm: true }">Confirm</button>
+  <button mat-raised-button mat-dialog-close>{{ "ShareButton.CancelEng" | translate }}</button>
+  <button mat-raised-button color="primary" [mat-dialog-close]="{ confirm: true }">{{ "ShareButton.ConfirmEng" | translate }}</button>
 </mat-dialog-actions>
