--- a/src/app/savings/savings-account-view/form-dialog/advance/advance.component.html
+++ b/src/app/savings/savings-account-view/form-dialog/advance/advance.component.html
@@ -9,7 +9,7 @@
   fxLayoutGap.lt-md="0%"
 >
   <mat-form-field fxFlex="96%" *ngIf="form.contains('entityAdvanceCash')">
-    <mat-label>Loại </mat-label>
+    <mat-label>{{ "Saving_Account_Component.clientAdvanceCash.entityAdvanceCash" | translate }} </mat-label>
     <mat-select required formControlName="entityAdvanceCash">
       <mat-option *ngFor="let type of typeEntityAdvanceCashes" [value]="type.id">
         {{ type.value }}
@@ -17,7 +17,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field class="select-book" *ngIf="form.contains('office')">
-    <mat-label>Chi nhánh</mat-label>
+    <mat-label>{{ "Saving_Account_Component.clientAdvanceCash.office" | translate }}</mat-label>
     <mat-select required formControlName="office">
       <mat-option *ngFor="let type of offices" [value]="type.officeId">
         {{ type.name }}
@@ -25,7 +25,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field class="select-book" *ngIf="form.contains('staff')">
-    <mat-label>Nhân viên</mat-label>
+    <mat-label>{{ "Saving_Account_Component.clientAdvanceCash.staff" | translate }}</mat-label>
     <mat-select required formControlName="staff">
       <mat-option *ngFor="let staff of staffs" [value]="staff.staffId">
         {{ staff.displayName }}
