--- a/src/app/savings/savings-account-view/form-dialog/transfer-cross-office/transfer-cross-office.component.html
+++ b/src/app/savings/savings-account-view/form-dialog/transfer-cross-office/transfer-cross-office.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title style="text-align: center">ĐIỀU CHUYỂN TIỀN</h1>
+<h1 mat-dialog-title style="text-align: center">{{ "Saving_Account_Component.TransferCrossOffice.title" | translate }}</h1>
 
 <div
   mat-dialog-content
@@ -9,7 +9,7 @@
   fxLayoutGap.lt-md="0%"
 >
   <mat-form-field fxFlex="96%" *ngIf="form.contains('typeAdvanceCashes')">
-    <mat-label>Loại </mat-label>
+    <mat-label>{{ "Saving_Account_Component.TransferCrossOffice.typeAdvanceCashes" | translate }} </mat-label>
     <mat-select required formControlName="typeAdvanceCashes">
       <mat-option *ngFor="let type of typeAdvanceCashes" [value]="type.id">
         {{ type.name }}
@@ -17,7 +17,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field fxFlex="96%" *ngIf="form.contains('office')">
-    <mat-label>Chi nhánh nhận</mat-label>
+    <mat-label>{{ "Saving_Account_Component.TransferCrossOffice.office" | translate }}</mat-label>
     <mat-select required formControlName="office">
       <mat-option *ngFor="let office of offices" [value]="office.officeId">
         {{ office.name }}
@@ -25,7 +25,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field class="select-book" *ngIf="form.contains('client')">
-    <mat-label>Nhân viên</mat-label>
+    <mat-label>{{ "Saving_Account_Component.TransferCrossOffice.staff" | translate }}</mat-label>
     <mat-select required formControlName="client">
       <mat-option *ngFor="let staff of staffs" [value]="staff.staffId">
         {{ staff.displayName }}
@@ -33,7 +33,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field class="select-book" *ngIf="form.contains('partner')">
-    <mat-label>Đối tác ghi nhân</mat-label>
+    <mat-label>{{ "Saving_Account_Component.TransferCrossOffice.partner" | translate }}</mat-label>
     <mat-select required formControlName="partner">
       <mat-option *ngFor="let partner of partners" [value]="partner.id">
         {{ partner.externalId }} - {{ partner.displayName }}
@@ -41,7 +41,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field class="select-book" *ngIf="form.contains('partnerLocal')">
-    <mat-label>Đối tác ghi nhân</mat-label>
+    <mat-label>{{ "Saving_Account_Component.TransferCrossOffice.partnerLocal" | translate }}</mat-label>
     <mat-select required formControlName="partnerLocal">
       <mat-option *ngFor="let partner of partnersLocal" [value]="partner.code">
         {{ partner.desc }}
@@ -49,7 +49,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field class="select-book" *ngIf="form.contains('savingAccountId')">
-    <mat-label>Tài khoản</mat-label>
+    <mat-label>{{ "Saving_Account_Component.TransferCrossOffice.savingAccount" | translate }}</mat-label>
     <mat-select required formControlName="savingAccountId">
       <mat-option *ngFor="let account of accounts" [value]="account.id">
         {{ account.externalId }}
@@ -58,12 +58,12 @@
   </mat-form-field>
 
   <mat-form-field fxFlex="96%" *ngIf="form.contains('amount')">
-    <mat-label>Số tiền</mat-label>
+    <mat-label>{{ "Saving_Account_Component.TransferCrossOffice.amount" | translate }}</mat-label>
     <input required currencyMask matInput formControlName="amount" />
   </mat-form-field>
 
   <mat-form-field *ngIf="form.contains('note')" fxFlex="48%">
-    <mat-label>{{ "Saving_Account_Component.clientAdvanceCash.labelNoteAdvance" | translate }}</mat-label>
+    <mat-label>{{ "Saving_Account_Component.TransferCrossOffice.note" | translate }}</mat-label>
     <input type="text" aria-multiline="true" matInput formControlName="note" />
   </mat-form-field>
 </div>
@@ -76,6 +76,6 @@
     [mat-dialog-close]="{ data: form }"
     [disabled]="!form.valid || form.pristine"
   >
-    Thực hiện
+  {{ "Saving_Account_Component.TransferCrossOffice.btnConfirm" | translate }}
   </button>
 </mat-dialog-actions>
