--- a/src/app/savings/savings-account-view/transactions-tab/export-transactions/export-transactions.component.html
+++ b/src/app/savings/savings-account-view/transactions-tab/export-transactions/export-transactions.component.html
@@ -3,31 +3,31 @@
   <div fxLayout="row" fxLayoutGap="3%" fxLayoutAlign="center">
 
     <mat-form-field fxFlex="30%">
-      <mat-label>From Date</mat-label>
+      <mat-label>{{'Savings.View.TransactionTab.ExportTransaction.fromDate'| translate}}</mat-label>
       <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="fromDatePicker" required formControlName="fromDate">
       <mat-datepicker-toggle matSuffix [for]="fromDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #fromDatePicker></mat-datepicker>
       <mat-error>
-        From date is <strong>required</strong>
+        {{'Savings.View.TransactionTab.ExportTransaction.errfromDate'| translate}}<strong>{{'Savings.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="30%">
-      <mat-label>To Date</mat-label>
+      <mat-label>{{'Savings.View.TransactionTab.ExportTransaction.toDate'| translate}}</mat-label>
       <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="toDatePicker" required formControlName="toDate">
       <mat-datepicker-toggle matSuffix [for]="toDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #toDatePicker></mat-datepicker>
       <mat-error>
-        To date is <strong>required</strong>
+        {{'Savings.View.TransactionTab.ExportTransaction.errtoDate'| translate}}<strong>{{'Savings.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
   </div>
 
   <div class="generate-button" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5%">
-    <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
+    <button type="button" mat-raised-button [routerLink]="['../']">{{'Savings.View.TransactionTab.ExportTransaction.Cancel'| translate}}</button>
     <button mat-raised-button color="primary" [disabled]="!transactionsReportForm.valid">
-    <fa-icon icon="cogs"></fa-icon>&nbsp;&nbsp;Generate Report &nbsp;</button>
+    <fa-icon icon="cogs"></fa-icon>&nbsp;&nbsp;{{'Savings.View.TransactionTab.ExportTransaction.GenerateReport'| translate}} &nbsp;</button>
   </div>
 
 </form>
