refactor module self-service

--- a/src/app/self-service/users/create-user/create-user.component.html
+++ b/src/app/self-service/users/create-user/create-user.component.html
@@ -19,7 +19,7 @@
           <div fxLayout="column">
 
             <mat-form-field>
-              <mat-label>Office</mat-label>
+              <mat-label>{{'SelfService.Users.Create.Office'| translate}}</mat-label>
               <mat-select>
                 <mat-option *ngFor="let office of officeData" [value]="office">
                   {{ office }}
@@ -28,7 +28,7 @@
             </mat-form-field>
 
             <mat-form-field>
-              <mat-label>Staff</mat-label>
+              <mat-label>{{'SelfService.Users.Create.Staff'| translate}}</mat-label>
               <mat-select>
                 <mat-option *ngFor="let staff of staffData" [value]="staff">
                   {{ staff }}
@@ -37,7 +37,7 @@
             </mat-form-field>
 
             <mat-form-field>
-              <mat-label>Client</mat-label>
+              <mat-label>{{'SelfService.Users.Create.Client'| translate}}</mat-label>
               <mat-select>
                 <mat-option *ngFor="let client of clientData" [value]="client">
                   {{ client }}
@@ -50,10 +50,10 @@
         </mat-card-content>
 
         <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-          <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
+          <button type="button" mat-raised-button [routerLink]="['../']">{{'SelfService.Users.Create.Cancel'| translate}}</button>
           <button mat-raised-button color="accent">
             <fa-icon icon="lock-open"></fa-icon>&nbsp;&nbsp;
-            Activate Self Service User
+            {{'SelfService.Users.Create.Activate'| translate}}
           </button>
         </mat-card-actions>
 
@@ -70,7 +70,7 @@
           <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
             <mat-form-field fxFlex="48%">
-              <mat-label>Office</mat-label>
+              <mat-label>{{'SelfService.Users.Create.Office'| translate}}</mat-label>
               <mat-select>
                 <mat-option *ngFor="let office of officeData" [value]="office">
                   {{ office }}
@@ -79,7 +79,7 @@
             </mat-form-field>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>Staff</mat-label>
+              <mat-label>{{'SelfService.Users.Create.Staff'| translate}}</mat-label>
               <mat-select>
                 <mat-option *ngFor="let staff of staffData" [value]="staff">
                   {{ staff }}
@@ -88,24 +88,24 @@
             </mat-form-field>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>Username</mat-label>
+              <mat-label>{{'SelfService.Users.Create.Username'| translate}}</mat-label>
               <input type="text" matInput>
             </mat-form-field>
 
             <span fxFlex="48%" fxHide.lt-md></span>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>First Name</mat-label>
+              <mat-label>{{'SelfService.Users.Create.FirstName'| translate}}</mat-label>
               <input type="text" matInput>
             </mat-form-field>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>Last Name</mat-label>
+              <mat-label>{{'SelfService.Users.Create.LastName'| translate}}</mat-label>
               <input type="text" matInput>
             </mat-form-field>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>Gender</mat-label>
+              <mat-label>{{'SelfService.Users.Create.Gender'| translate}}</mat-label>
               <mat-select>
                 <mat-option *ngFor="let gender of genderData" [value]="gender">
                   {{ gender }}
@@ -114,19 +114,19 @@
             </mat-form-field>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>Date of Birth</mat-label>
+              <mat-label>{{'SelfService.Users.Create.DateOfBirth'| translate}}</mat-label>
               <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="dateOfBirthDatePicker">
               <mat-datepicker-toggle matSuffix [for]="dateOfBirthDatePicker"></mat-datepicker-toggle>
               <mat-datepicker #dateOfBirthDatePicker></mat-datepicker>
             </mat-form-field>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>Email</mat-label>
+              <mat-label>{{'SelfService.Users.Create.Email'| translate}}</mat-label>
               <input type="email" matInput>
             </mat-form-field>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>Mobile No</mat-label>
+              <mat-label>{{'SelfService.Users.Create.MobileNo'| translate}}</mat-label>
               <input type="tel" matInput>
             </mat-form-field>
 
@@ -135,8 +135,8 @@
         </mat-card-content>
 
         <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-          <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-          <button mat-raised-button color="primary">Submit</button>
+          <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+          <button mat-raised-button color="primary">{{ "ShareButton.Submit" | translate }}</button>
         </mat-card-actions>
 
       </form>
