--- a/src/app/shared/mat-select-search/mat-select-search.component.html
+++ b/src/app/shared/mat-select-search/mat-select-search.component.html
@@ -16,7 +16,7 @@
           aria-label="Clear"
           (click)="_reset(true)"
           class="mat-select-search-clear">
-    <mat-icon>close</mat-icon>
+    <mat-icon>{{'Shared.MatSelectSearch.close'| translate}}</mat-icon>
   </button>
 </div>
 
