--- a/src/app/shared/billpos-selector/billpos-selector.component.html
+++ b/src/app/shared/billpos-selector/billpos-selector.component.html
@@ -1,5 +1,5 @@
 <mat-form-field id="server-selector">
-    <mat-label>Billpos Service Server</mat-label>
+    <mat-label>{{'Shared.BillposSelector.serverBillposSelector'| translate}}</mat-label>
     <mat-select [formControl]="serverBillposSelector">
       <mat-option *ngFor="let serverBillpos of billposServers" [value]="serverBillpos">
         {{ serverBillpos }}
