--- a/src/app/shared/change-password-dialog/change-password-dialog.component.html
+++ b/src/app/shared/change-password-dialog/change-password-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Change Password</h1>
+<h1 mat-dialog-title>{{'Shared.ChangePasswordDialog.title'| translate}}</h1>
 
 <div mat-dialog-content>
 
@@ -7,30 +7,36 @@
     <div fxLayout="column">
 
       <mat-form-field>
-        <mat-label>Password</mat-label>
+        <mat-label>{{'Shared.ChangePasswordDialog.Password'| translate}}</mat-label>
         <input matInput formControlName="password" type="password">
         <mat-error *ngIf="changePasswordForm.controls.password.hasError('required')">
-          Password <strong>is required</strong>
+          {{'Shared.ChangePasswordDialog.errPassword'| translate}}<strong>{{'Shared.strongRequired'| translate }}</strong>
         </mat-error>
         <mat-error *ngIf="changePasswordForm.controls.password.hasError('minlength')">
-          Password should be at least <strong>8 characters long</strong>
+          {{'Shared.ChangePasswordDialog.errPassword2'| translate}}
+          <strong>{{'Shared.ChangePasswordDialog.alert'| translate}}</strong>
         </mat-error>
         <mat-error *ngIf="changePasswordForm.controls.password.hasError('maxlength')">
-          Password should not be more than <strong>50 characters long</strong>
+          {{'Shared.ChangePasswordDialog.errPassword3'| translate}}
+          <strong>{{'Shared.ChangePasswordDialog.alert2'| translate}}</strong>
         </mat-error>
         <mat-error *ngIf="changePasswordForm.controls.password.hasError('pattern') && !(changePasswordForm.controls.password.hasError('minlength') || changePasswordForm.controls.password.hasError('maxlength'))">
-          Password should include a <strong>numeral</strong> and at <strong>least one uppercase</strong> ,<strong>lowercase and special character</strong>
+          {{'Shared.ChangePasswordDialog.errPassword4'| translate}}
+          <strong>{{'Shared.ChangePasswordDialog.numeral'| translate}}</strong>
+          {{'Shared.ChangePasswordDialog.andAt'| translate}}
+           <strong>{{'Shared.ChangePasswordDialog.alert3'| translate}}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-form-field>
-        <mat-label>Repeat Password</mat-label>
+        <mat-label>{{'Shared.ChangePasswordDialog.repeatPassword'| translate}}</mat-label>
         <input matInput formControlName="repeatPassword" type="password">
         <mat-error *ngIf="changePasswordForm.controls.repeatPassword.hasError('required')">
-          Password <strong>required</strong>
+          {{'Shared.ChangePasswordDialog.errPassword5'| translate}}<strong>{{'Shared.strongRequired'| translate }}</strong>
         </mat-error>
         <mat-error *ngIf="changePasswordForm.controls.repeatPassword.hasError('notequal')">
-          Password <strong>does not match</strong>
+          {{'Shared.ChangePasswordDialog.Password'| translate}}
+          <strong>{{'Shared.ChangePasswordDialog.alert4'| translate}}</strong>
         </mat-error>
       </mat-form-field>
 
@@ -41,6 +47,6 @@
 </div>
 
 <mat-dialog-actions align="center">
-  <button mat-raised-button mat-dialog-close>Cancel</button>
-  <button mat-raised-button color="warn" [disabled]="!changePasswordForm.valid" [mat-dialog-close]="{password:changePasswordForm.get('password').value,repeatPassword:changePasswordForm.get('repeatPassword').value}">Confirm</button>
+  <button mat-raised-button mat-dialog-close>{{ "ShareButton.CancelEng" | translate }}</button>
+  <button mat-raised-button color="warn" [disabled]="!changePasswordForm.valid" [mat-dialog-close]="{password:changePasswordForm.get('password').value,repeatPassword:changePasswordForm.get('repeatPassword').value}">{{ "ShareButton.ConfirmEng" | translate }}</button>
 </mat-dialog-actions>
