--- a/src/app/shared/enable-dialog/enable-dialog.component.html
+++ b/src/app/shared/enable-dialog/enable-dialog.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Enable</h1>
+<h1 mat-dialog-title>{{'Shared.EnableDialog.Enable'| translate}}</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to enable {{ data.enableContext }} ?</p>
+  <p>{{'Shared.EnableDialog.ask'| translate}}{{ data.enableContext }} ?</p>
 </div>
 <mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close>Cancel</button>
-  <button mat-raised-button color="warn" [mat-dialog-close]="{ enable: true }">Confirm</button>
+  <button mat-raised-button mat-dialog-close>{{ "ShareButton.CancelEng" | translate }}</button>
+  <button mat-raised-button color="warn" [mat-dialog-close]="{ enable: true }">{{ "ShareButton.ConfirmEng" | translate }}</button>
 </mat-dialog-actions>
