--- a/src/app/shared/error-dialog/error-dialog.component.html
+++ b/src/app/shared/error-dialog/error-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title> Error Log </h1>
+<h1 mat-dialog-title> {{'Shared.EnableDialog.ErrorLog'| translate}} </h1>
 
 <div mat-dialog-content>
 
