--- a/src/app/shared/file-upload/file-upload.component.html
+++ b/src/app/shared/file-upload/file-upload.component.html
@@ -8,7 +8,7 @@
     <button mat-button (click)="uploadFile.click()">
       <fa-icon icon="folder-open" size="lg"></fa-icon>
       &nbsp;&nbsp;
-      Browse
+      {{'Shared.FileUpload.Browse'| translate}}
     </button>
   </span>
 
