--- a/src/app/shared/language-selector/language-selector.component.html
+++ b/src/app/shared/language-selector/language-selector.component.html
@@ -1,5 +1,5 @@
 <mat-form-field id="language-selector" >
-  <mat-label>Language</mat-label>
+  <mat-label>{{'Shared.LanguageSelector.Language'| translate}}</mat-label>
   <mat-select [formControl]="languageSelector" [(value)]="selectedlang" (selectionChange)="setLanguage(selectedlang)">
     <mat-option *ngFor="let language of languages" [value]="language" >
       {{ language }}
